# gpt-jupyterlab

./: .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml  publish-docker.yml
gpt_jupyterlab/: __init__.py  handlers.py
gpt_jupyterlab/tests/: __init__.py  test_handlers.py
jupyter-config/nb-config/: gpt_jupyterlab.json
jupyter-config/server-config/: gpt_jupyterlab.json
schema/: plugin.json
src/: handler.ts  index.ts
src/__tests__/: gpt_jupyterlab.spec.ts
ui-tests/: package.json
ui-tests/tests/: gpt_jupyterlab.spec.ts
